samples/_failures_safe/1761087540_874bc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4892d97.c: In function ‘tokenize_next’:
./samples/SAFE/__tmp_a4892d97.c:172:5: error: expected declaration or statement at end of input
  172 |     if (parse_string(t, token)) return 1;
      |     ^~
